[tool.poetry]
name = "allensdk"
version = "2.13.6"
description = "code for reading and processing Allen Institute for Brain Science data"
authors = ["David Feng"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
psycopg2-binary = "^2.9.4"
hdmf = "^3.4.6"
h5py = "^3.7.0"
pandas = "^1.5.0"
Jinja2 = "^3.1.2"
scipy = "^1.9.1"
six = "^1.16.0"
pynrrd = "^0.4.3"
future = "^0.18.2"
requests = "^2.28.1"
requests-toolbelt = "^0.10.0"
simplejson = "^3.17.6"
scikit-image = "^0.18"
scikit-build = "^0.15.0"
statsmodels = "^0.13.2"
SimpleITK = "^2.2.0"
argschema = "^3.0.4"
Glymur = "^0.11.7"
xarray = "^2022.9.0"
pynwb = {version = "^2.1.0", allow-prereleases = true}
tables = "^3.7.0"
seaborn = "^0.12.0"
aiohttp = "^3.8.3"
nest-asyncio = "1.5.5"
tqdm = "^4.64.1"
ndx-events = "^0.2.0"
boto3 = "^1.24.89"
semver = "^2.13.0"
cachetools = "^5.2.0"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
